logo & some text

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@ http://www.templatemo.com/tm-468-onetel
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand"><img src="images/logo.png" class="img-responsive" alt="logo"></a>
+			<a href="#" class="navbar-brand"><img src="images/mini-logo.png" class="img-responsive" alt="logo" height="80" width="100"></a><br>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
@@ -52,36 +52,38 @@ http://www.templatemo.com/tm-468-onetel
 		<div class="row">
 			<div class="col-md-5 col-sm-3"></div>
 			<div class="col-md-7 col-sm-9">
-				<h3>welcome to</h3>
-				<h1>Onetel Design Studio</h1>
+				<!--<h3>Привет</h3>
+				<h1>Мы - JK developers!</h1>-->
 			</div>
 		</div>
 	</div>
 </div>
 
 <!-- divider section -->
+<br>
 <div class="divider">
+<br>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4 col-sm-6">
 				<div class="divider-wrapper divider-one">
 					<i class="fa fa-laptop"></i>
-					<h2>Responsive</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+					<h2>Мощно</h2>
+					<p>Высоконагруженные системы, параллельное программирование, Big data, распределённые вычисления и машинное обучение - что может быть проще:)</p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="divider-wrapper divider-two">
 					<i class="fa fa-mobile"></i>
-					<h2>Easy to use</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+					<h2>Красиво</h2>
+					<p>Заказчик в первую очередь видит не то, что "под капотом" системы. Заказчик сначала замечает её внешний вид. Мы сделаем всё, чтобы Вы остались довольны и тем, и тем.</p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-12">
 				<div class="divider-wrapper divider-three">
 					<i class="fa fa-life-ring"></i>
-					<h2>Quick Support</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+					<h2>Надёжно</h2>
+					<p>Мы не работаем по принципу сделал-забыл. Любой наш продукт получит тех. поддержку от нас же. Вам останется только наслаждаться его бесперебойной работой.</p>
 				</div>
 			</div>
 		</div>
@@ -106,12 +108,13 @@ http://www.templatemo.com/tm-468-onetel
 </div>
 
 <!-- portfolio section -->
+<!--
 <div id="portfolio">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8 col-sm-12">
-				<h2>Recent Projects</h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+				<h2>Мы предлагаем</h2>
+                <p>Немного решений, которые уже готовы и нуждаются лишь в небольшой корректировке в зависимости от Ваших предпочтений</p>
 			</div>
          </div>
          
@@ -145,6 +148,7 @@ http://www.templatemo.com/tm-468-onetel
 		</div>
 	</div>
 </div>		
+-->
 
 <!-- footer section -->
 <footer>
@@ -152,7 +156,7 @@ http://www.templatemo.com/tm-468-onetel
 		<div class="row">
         
 			<div class="col-md-5 col-sm-4">
-				<img src="images/logo.png" class="img-responsive" alt="logo">
+				<img src="images/logo.png" class="img-responsive" alt="logo" height="25px" width="25px">
 				<p>Onetel is free Bootstrap v3.3.5 HTML5 layout from 
                 <a rel="nofollow" href="http://www.facebook.com/templatemo" target="_parent">templatemo</a> website.
                 Feel free to use it for your website.</p>
