--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Onetel Template - Contact</title>
+	<title>JK developers</title>
     <meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta charset="utf-8">
@@ -34,46 +34,46 @@ http://www.templatemo.com/tm-468-onetel
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand"><img src="images/logo.png" class="img-responsive" alt="logo"></a>
+			<a href="/" class="navbar-brand"><img src="images/mini-logo.png" class="img-responsive" alt="logo" height="80" width="100"></a><br>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
-				<li><a href="portfolio.html">PORTFOLIO</a></li>
-				<li><a href="contact.html" class="active">CONTACT</a></li>
+				<li><a href="main.html">HOME</a></li>
+				<li><a href="about.html">О НАС</a></li>
+				<li><a href="portfolio.html">ПРЕДЛОЖЕНИЯ</a></li>
+				<li><a href="contact.html" class="active">КОНТАКТЫ</a></li>
 			</ul>
 		</div>
 	</div>
 </div>		
 
 <!-- contact header section -->
-<div id="contact-header">
+<!--<div id="contact-header">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12"></div>
 		</div>
 	</div>
-</div>
+</div>-->
 
 <!-- contact section -->
 <div id="contact">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8 col-sm-12">
-				<h2>Get in touch</h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+				<h2>Напишите нам</h2>
+                <p>Есть вопросы? Хотите сделать заказ? Свяжитесь с нами по email или через эту форму.</p>
 			</div>
 			<div class="col-md-8 col-sm-8 mt30">
 				<form action="#" method="post" role="form">
 					<div class="col-md-6 col-sm-6">
-                        <label for="name">NAME</label>
+                        <label for="name">КАК ВАС ЗОВУТ?</label>
                         <input name="name" type="text" class="form-control" id="name">
                       <label for="email">EMAIL</label>
                         <input name="email" type="email" class="form-control" id="email">
 					</div>
 					<div class="col-md-6 col-sm-6">
-						<label for="message">MESSAGE</label>
+						<label for="message">СООБЩЕНИЕ</label>
 						<textarea name="message" rows="6" class="form-control" id="message"></textarea>
 					</div>
                     <div class="col-md-6 col-sm-6">
@@ -84,20 +84,16 @@ http://www.templatemo.com/tm-468-onetel
 			<div class="col-md-4 col-sm-4 address">
 				<div>
 					<h3>Email</h3>
-					<p>info@company.com</p>
-				</div>
-				<div>
-					<h3>Phones</h3>
-					<p>010-020-0340 | 090-080-0760</p>
+					<a href="mailto:contact@jkdev.ru"><p>contact@jkdev.ru</p></a>
 				</div>
 			</div>
-			<div class="col-md-12 col-sm-12 mt20">
+			<!--<div class="col-md-12 col-sm-12 mt20">
             	<h3>Location</h3>
 				<div class="google_map mt20">
 					<div id="map-canvas"></div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 	</div>
 </div>		
 
@@ -107,30 +103,27 @@ http://www.templatemo.com/tm-468-onetel
 		<div class="row">
         
 			<div class="col-md-5 col-sm-4">
-				<img src="images/logo.png" class="img-responsive" alt="logo">
-				<p>Onetel is free Bootstrap v3.3.5 HTML5 layout from 
-                <a rel="nofollow" href="http://www.facebook.com/templatemo" target="_parent">templatemo</a> website.
-                Feel free to use it for your website.</p>
-				<p><i class="fa fa-phone"></i> 010-020-0340</p>
-				<p><i class="fa fa-envelope-o"></i> info@company.com</p>
-              <p><i class="fa fa-globe"></i> www.company.com</p>
+				<!--<img src="images/logo.png" class="img-responsive" alt="logo" height="25px" width="25px">-->
+				<p>JK developers - студия вэб-разработки, выполняющая различные заказы: от одностраничных сайтов до высоконагруженных проектов.</p>
+				<!--<p><i class="fa fa-phone"></i> 010-020-0340</p>-->
+				<p><i class="fa fa-envelope-o"></i> contact@jkdev.ru</p>
+              <p><i class="fa fa-globe"></i> www.jkdev.ru</p>
 			</div>
 
-			<div class="col-md-3 col-sm-4">
+			<!--<div class="col-md-3 col-sm-4">
 				<h3>Useful Links</h3>
 				<p><a href="#">HTML5 Templates</a></p>
 				<p><a href="#">CSS3 Tricks</a></p>
 				<p><a href="#">Design Blog</a></p>
 				<p><a href="#">Animations</a></p>
-			</div>
+			</div>-->
             
 			<div class="col-md-4 col-sm-4 newsletter">
-				<h3>Newsletter</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismo.</p>
+				<h3>Или мы напишем Вам:)</h3>
 				<div class="input-group">
            	    	<form action="#" method="post">
-                        <input name="email" type="email" placeholder="Enter your email" class="form-control" autorequired>
-                    	<button type="submit" name="submit" class="btn email">Submit</button>
+                        <input name="email" type="email" placeholder="Ваш email" class="form-control" autorequired>
+                    	<button type="submit" name="submit" class="btn email">Отправить</button>
                   	</form>
 				 </div>
 			</div>
@@ -144,9 +137,9 @@ http://www.templatemo.com/tm-468-onetel
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-sm-6">
-				<p>Copyright © 2084 Company Name</p>
+				<p>Copyright © 2017 JK developers</p>
 			</div>
-			<div class="col-md-6 col-sm-6">
+			<!--<div class="col-md-6 col-sm-6">
 				<ul class="social-icons">
 					<li><a href="#" class="fa fa-facebook"></a></li>
 					<li><a href="#" class="fa fa-twitter"></a></li>
@@ -155,7 +148,7 @@ http://www.templatemo.com/tm-468-onetel
 					<li><a href="#" class="fa fa-behance"></a></li>
 					<li><a href="#" class="fa fa-envelope-o"></a></li>
 				</ul>
-			</div>
+			</div>-->
 		</div>
 	</div>
 </div>
