--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Onetel Bootstrap Template</title>
+	<title>JK developers</title>
     <meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta charset="utf-8">
@@ -38,9 +38,9 @@ http://www.templatemo.com/tm-468-onetel
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="index.html" class="active">HOME</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
-				<li><a href="portfolio.html">PORTFOLIO</a></li>
-				<li><a href="contact.html">CONTACT</a></li>
+				<li><a href="about.html">О НАС</a></li>
+				<li><a href="portfolio.html">ПРЕДЛОЖЕНИЯ</a></li>
+				<li><a href="contact.html">КОНТАКТЫ</a></li>
 			</ul>
 		</div>
 	</div>
@@ -95,13 +95,13 @@ http://www.templatemo.com/tm-468-onetel
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-sm-12">
-				<img src="images/about-img.jpg" class="img-responsive" alt="about img">
+				<img src="images/contract-1024x681.jpg" class="img-responsive" alt="about img" width="450" height="300">
 			</div>
 			<div class="col-md-6 col-sm-12 about-des">
-				<h2>Startup Business</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet.</p>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-				<a href="about.html" class="btn btn-default">LEARN MORE</a>
+				<h2>Начнём работу!</h2>
+				<p>Вам не придётся долго разъяснять разработчикам, чего вы хотите - вы будете общаться только с менеджером, работающим с Вами. Остальное - это его работа.</p>
+				<p>Перед тем, как сдать Вам заказ, менеджер протестирует его. Акт тестирования мы предоставим вместе с кодом, который Вы заказывали.</p>
+				<a href="contact.html" class="btn btn-default">СДЕЛАТЬ ЗАКАЗ</a>
 			</div>
 		</div>
 	</div>
@@ -156,30 +156,28 @@ http://www.templatemo.com/tm-468-onetel
 		<div class="row">
         
 			<div class="col-md-5 col-sm-4">
-				<img src="images/logo.png" class="img-responsive" alt="logo" height="25px" width="25px">
-				<p>Onetel is free Bootstrap v3.3.5 HTML5 layout from 
-                <a rel="nofollow" href="http://www.facebook.com/templatemo" target="_parent">templatemo</a> website.
-                Feel free to use it for your website.</p>
-				<p><i class="fa fa-phone"></i> 010-020-0340</p>
-				<p><i class="fa fa-envelope-o"></i> info@company.com</p>
-              <p><i class="fa fa-globe"></i> www.company.com</p>
+				<!--<img src="images/logo.png" class="img-responsive" alt="logo" height="25px" width="25px">-->
+				<p>JK developers - студия вэб-разработки, выполняющая различные заказы: от одностраничных сайтов до высоконагруженных проектов.</p>
+				<!--<p><i class="fa fa-phone"></i> 010-020-0340</p>-->
+				<p><i class="fa fa-envelope-o"></i> contact@jkdev.ru</p>
+              <p><i class="fa fa-globe"></i> www.jkdev.ru</p>
 			</div>
 
-			<div class="col-md-3 col-sm-4">
+			<!--<div class="col-md-3 col-sm-4">
 				<h3>Useful Links</h3>
 				<p><a href="#">HTML5 Templates</a></p>
 				<p><a href="#">CSS3 Tricks</a></p>
 				<p><a href="#">Design Blog</a></p>
 				<p><a href="#">Animations</a></p>
-			</div>
+			</div>-->
             
 			<div class="col-md-4 col-sm-4 newsletter">
-				<h3>Newsletter</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismo.</p>
+				<h3>Мы свяжемся с Вами</h3>
+				<p>Просто оставьте свой email</p>
 				<div class="input-group">
            	    	<form action="#" method="post">
-                        <input name="email" type="email" placeholder="Enter your email" class="form-control" autorequired>
-                    	<button type="submit" name="submit" class="btn email">Submit</button>
+                        <input name="email" type="email" placeholder="Ваш email" class="form-control" autorequired>
+                    	<button type="submit" name="submit" class="btn email">Отправить</button>
                   	</form>
 				 </div>
 			</div>
@@ -193,9 +191,9 @@ http://www.templatemo.com/tm-468-onetel
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-sm-6">
-				<p>Copyright © 2084 Company Name</p>
+				<p>Copyright © 2017 JK developers</p>
 			</div>
-			<div class="col-md-6 col-sm-6">
+			<!--<div class="col-md-6 col-sm-6">
 				<ul class="social-icons">
 					<li><a href="#" class="fa fa-facebook"></a></li>
 					<li><a href="#" class="fa fa-twitter"></a></li>
@@ -204,7 +202,7 @@ http://www.templatemo.com/tm-468-onetel
 					<li><a href="#" class="fa fa-behance"></a></li>
 					<li><a href="#" class="fa fa-envelope-o"></a></li>
 				</ul>
-			</div>
+			</div>-->
 		</div>
 	</div>
 </div>
