--- a/portfolio.html
+++ b/portfolio.html
@@ -100,23 +100,81 @@ http://www.templatemo.com/tm-468-onetel
 		<div class="row">
 			<div class="col-md-4 col-sm-6">
 				<div class="divider-wrapper divider-one">
-					<i class="fa fa-laptop"></i>
-					<h2>Мощно</h2>
-					<p>Высоконагруженные системы, параллельное программирование, Big data, распределённые вычисления и машинное обучение - что может быть проще:)</p>
+					<i class="fa fa-eye"></i>
+					<h2>Парсеры</h2>
+					<p>Пишем парсеры любой сложности на Python (BS4 + Selenium) и Java (Jsoup). Уже есть готовое решение для парсинга WIX-сайтов.<br><b>Цена: от 500 руб</b></p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="divider-wrapper divider-two">
-					<i class="fa fa-mobile"></i>
-					<h2>Красиво</h2>
-					<p>Заказчик в первую очередь видит не то, что "под капотом" системы. Заказчик сначала замечает её внешний вид. Мы сделаем всё, чтобы Вы остались довольны и тем, и тем.</p>
+					<i class="fa fa-globe"></i>
+					<h2>Superproxy</h2>
+					<p>Динамическое изменение IP-адреса и хэдеров (request headers) помогает нашим парсерам оставаться незаметными.<br><b>Цена: от 500 руб</b></p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-12">
 				<div class="divider-wrapper divider-three">
-					<i class="fa fa-life-ring"></i>
-					<h2>Надёжно</h2>
-					<p>Мы не работаем по принципу сделал-забыл. Любой наш продукт получит тех. поддержку от нас же. Вам останется только наслаждаться его бесперебойной работой.</p>
+					<i class="fa fa-database"></i>
+					<h2>Базы данных</h2>
+					<p>От SQLite до PostgreSQL и Apache Kafka - нам не важно, какую базу данных использует Ваш проект. Мы работаем со всеми БД. <br><b>Настройка БД: от 100 руб</b></p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>	
+<br>
+<div class="divider">
+<br>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
+				<div class="divider-wrapper divider-one" style="background: #50AF8E;">
+					<i class="fa fa-pencil"></i>
+					<h2>Вёрстка</h2>
+					<p>Разработка дизайна и создание сайта, подключение сервисов аналитики, покупка домена и создание электронной почты для него.<br><b>Пакет "Вёрстка": 2000 руб</b></p>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="divider-wrapper divider-two" style="background: #8E50AF;">
+					<i class="fa fa-code"></i>
+					<h2>ML и LSA</h2>
+					<p>Наши специалисты в области машинного обучения (ML) и латентно-семантического анализа (LSA) смогут выполнить самые сложные заказы.<br><b>Цена: от 2500 руб</b></p>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-12">
+				<div class="divider-wrapper divider-three" style="background: #C70039;">
+					<i class="fa fa-envelope-o"></i>
+					<h2>Боты</h2>
+					<p>Нужен чат-бот в телеграме/вк? Хотите создать почтового спам-бота для рассылки всем людям, которые вывешивают объявление в какой-либо категории на Авито? <b>Цена: от 800 руб</b></p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>	
+<br>
+<div class="divider">
+<br>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
+				<div class="divider-wrapper divider-one" style="background: #568AAF;">
+					<i class="fa fa-server"></i>
+					<h2>Big Data</h2>
+					<p>Сбор, обработка, статистический анализ и проч. для больших данных. Данные можете предоставить Вы, а можем спарсить и мы.<br><b>Цена: от 1200 руб</b></b></p>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="divider-wrapper divider-two" style="background: #AF5695;">
+					<i class="fa fa-cloud"></i>
+					<h2>Серверы</h2>
+					<p>Поможем подобрать бесплатный хостинг или настроить AWS под Ваш проект, а большим проектам подберём выделенный сервер.<br><b>Цена: от 100 руб</b></p>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-12">
+				<div class="divider-wrapper divider-three" style="background: #54A450;">
+					<i class="fa fa-smile-o"></i>
+					<h2>Особый подход</h2>
+					<p>С Вами будет работать менеджер, который возьмёт на себя все заботы о технической части заказа, а затем протестирует наш продукт и составит акт тестирования. <b>Разумеется, бесплатно</b></p>
 				</div>
 			</div>
 		</div>
