--- a/letstype.html
+++ b/letstype.html
@@ -66,7 +66,7 @@ span{
 <body>
 
 <p>Иди на хуй, {{name}}!</p>
-<p><span>|</span></p> 
+<p>А ещё, фезека - зло. Меня бесит фезека.<span>|</span></p> 
 
 </body>
 </html>
